feat(sql4j): implement Phase 4, 5 and 6 (Observability, Aggregations, L2 Caching)